<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fire_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.fire.app.ui.auth.OnboardingFragment"
        android:label="Fire">
        <action
            android:id="@+id/action_onboarding_to_loginWebView"
            app:destination="@id/loginWebViewFragment" />
        <action
            android:id="@+id/action_onboarding_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loginWebViewFragment"
        android:name="com.fire.app.ui.auth.LoginWebViewFragment"
        android:label="@string/login_title">
        <action
            android:id="@+id/action_loginWebView_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.fire.app.ui.home.HomeFragment"
        android:label="@string/tab_home">
        <action
            android:id="@+id/action_home_to_topicDetail"
            app:destination="@id/topicDetailFragment" />
        <action
            android:id="@+id/action_home_to_search"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.fire.app.ui.notifications.NotificationsFragment"
        android:label="@string/tab_notifications">
        <action
            android:id="@+id/action_notifications_to_topicDetail"
            app:destination="@id/topicDetailFragment" />
        <action
            android:id="@+id/action_notifications_to_profile"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.fire.app.ui.profile.ProfileFragment"
        android:label="@string/tab_profile">
        <action
            android:id="@+id/action_profile_to_bookmarks"
            app:destination="@id/bookmarksFragment" />
        <action
            android:id="@+id/action_profile_to_privateMessages"
            app:destination="@id/privateMessagesFragment" />
    </fragment>

    <fragment
        android:id="@+id/topicDetailFragment"
        android:name="com.fire.app.ui.topicdetail.TopicDetailFragment"
        android:label="@string/topic_detail_title_fallback">
        <argument
            android:name="topicId"
            app:argType="long" />
        <argument
            android:name="topicSlug"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="topicTitle"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="targetPostNumber"
            app:argType="integer"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_topicDetail_to_profile"
            app:destination="@id/profileFragment" />
        <deepLink
            app:uri="fire://topic/{topicId}"
            app:action="android.intent.action.VIEW" />
        <deepLink
            app:uri="fire://topic/{topicId}/{targetPostNumber}"
            app:action="android.intent.action.VIEW" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.fire.app.ui.search.SearchFragment"
        android:label="@string/search_title" />

    <fragment
        android:id="@+id/bookmarksFragment"
        android:name="com.fire.app.ui.bookmarks.BookmarksFragment"
        android:label="@string/feed_bookmarks" />

    <fragment
        android:id="@+id/privateMessagesFragment"
        android:name="com.fire.app.ui.privatemessages.PrivateMessagesFragment"
        android:label="@string/feed_private_messages_inbox" />

</navigation>
